; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_sampleconv.c_main.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_sampleconv.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURLOPT_URL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"https://example.com\00", align 1
@CURLOPT_CONV_FROM_NETWORK_FUNCTION = common dso_local global i32 0, align 4
@my_conv_from_ascii_to_ebcdic = common dso_local global i8* null, align 8
@CURLOPT_CONV_TO_NETWORK_FUNCTION = common dso_local global i32 0, align 4
@my_conv_from_ebcdic_to_ascii = common dso_local global i8* null, align 8
@CURLOPT_CONV_FROM_UTF8_FUNCTION = common dso_local global i32 0, align 4
@my_conv_from_utf8_to_ebcdic = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  store i32 0, i32* %1, align 4
  %3 = call i32* (...) @curl_easy_init()
  store i32* %3, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %26

6:                                                ; preds = %0
  %7 = load i32*, i32** %2, align 8
  %8 = load i32, i32* @CURLOPT_URL, align 4
  %9 = call i32 @curl_easy_setopt(i32* %7, i32 %8, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @CURLOPT_CONV_FROM_NETWORK_FUNCTION, align 4
  %12 = load i8*, i8** @my_conv_from_ascii_to_ebcdic, align 8
  %13 = call i32 @curl_easy_setopt(i32* %10, i32 %11, i8* %12)
  %14 = load i32*, i32** %2, align 8
  %15 = load i32, i32* @CURLOPT_CONV_TO_NETWORK_FUNCTION, align 4
  %16 = load i8*, i8** @my_conv_from_ebcdic_to_ascii, align 8
  %17 = call i32 @curl_easy_setopt(i32* %14, i32 %15, i8* %16)
  %18 = load i32*, i32** %2, align 8
  %19 = load i32, i32* @CURLOPT_CONV_FROM_UTF8_FUNCTION, align 4
  %20 = load i8*, i8** @my_conv_from_utf8_to_ebcdic, align 8
  %21 = call i32 @curl_easy_setopt(i32* %18, i32 %19, i8* %20)
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @curl_easy_perform(i32* %22)
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @curl_easy_cleanup(i32* %24)
  br label %26

26:                                               ; preds = %6, %0
  ret i32 0
}

declare dso_local i32* @curl_easy_init(...) #1

declare dso_local i32 @curl_easy_setopt(i32*, i32, i8*) #1

declare dso_local i32 @curl_easy_perform(i32*) #1

declare dso_local i32 @curl_easy_cleanup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
